# game-framework

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt
code/graphics/: CMakeLists.txt
code/graphics/buffers/: CMakeLists.txt
code/graphics/buffers/index_buffer/: CMakeLists.txt  main.cpp
code/graphics/buffers/uniform_buffer/: CMakeLists.txt  main.cpp
code/graphics/buffers/vertex_buffer/: CMakeLists.txt  main.cpp
code/graphics/shaders/: CMakeLists.txt  main.cpp
code/graphics/transformations/: CMakeLists.txt  main.cpp
code/platform/: CMakeLists.txt
code/platform/context/: CMakeLists.txt  main.cpp
code/platform/window/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
