#=======================================================================================================================
cmake_minimum_required(VERSION 3.28)
#=======================================================================================================================
project(GameFramework)
#=======================================================================================================================
add_subdirectory(code)
add_subdirectory(libraries)
#=======================================================================================================================