#=======================================================================================================================
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
#=======================================================================================================================
cmake_minimum_required(VERSION 3.28)
#=======================================================================================================================
project(GameFramework)
#=======================================================================================================================
add_subdirectory(code)
add_subdirectory(libraries)
#=======================================================================================================================