#=======================================================================================================================
set(BUILD_FOLDER_PATH "${CMAKE_SOURCE_DIR}/build/graphics")
#=======================================================================================================================
add_subdirectory(buffers)
add_subdirectory(shaders)
#=======================================================================================================================