#=======================================================================================================================
set(BUILD_FOLDER_PATH "${CMAKE_SOURCE_DIR}/build/platform")
#=======================================================================================================================
add_subdirectory(window)
add_subdirectory(context)
#=======================================================================================================================